--- a/src/main/resources/static/css/orderDetails.css
+++ b/src/main/resources/static/css/orderDetails.css
@@ -56,3 +56,8 @@ input[type="radio"]:checked+label{
     border: 2px solid var(--royal-red);
     color: var(--royal-red);
 }
+
+.customerUsername:hover{
+    color: var(--dark-blue);
+    cursor: pointer;
+}
