--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -37,7 +37,9 @@
             <h1 class="display-1 fw-bold">400</h1>
             <p class="fs-3"><span class="text-danger">Opps!</span> Bad request.</p>
             <p class="lead">
-                Could not process your request. Please try something else.
+                Could not process your request
+            </p>
+            <p th:unless="reason==null" th:text="${reason}">
             </p>
             <a th:href="@{/}" class="btn btn-primary">Go Home</a>
         </div>
