--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -36,7 +36,7 @@
         <div class="text-center">
             <h1 class="display-1 fw-bold">404</h1>
             <p class="fs-3"><span class="text-danger">Opps!</span> Page not found.</p>
-            <p class="lead" th:if="${reason}!=null" th:text="|The ${reason} you are searching for does not exist|"></p>
+            <p class="lead" th:unless="${reason}==null" th:text="|The ${reason} you are searching for does not exist|"></p>
             <p class="lead" th:if="${reason}==null">
                 The page you’re looking for does not exist.
             </p>
