--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -34,12 +34,10 @@
 <main>
     <div class="d-flex align-items-center justify-content-center vh-80">
         <div class="text-center">
-            <h1 class="display-1 fw-bold">400</h1>
-            <p class="fs-3"><span class="text-danger">Opps!</span> Bad request.</p>
-            <p class="lead">
-                Could not process your request.
-            </p>
-            <p th:unless="reason==null" th:text="${reason}">
+            <h1 class="display-1 fw-bold">403</h1>
+            <p class="fs-3"><span class="text-danger">Opps!</span> You are not allowed to see this.</p>
+            <p class="lead" th:if="${reason}==null">
+                You don't have the authorities to access this page.
             </p>
             <a th:href="@{/}" class="btn btn-primary">Go Home</a>
         </div>
