--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -38,7 +38,7 @@
 
 <main>
     <!-- Up to Top Button-->
-    <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top">&#x2191</button>
+    <th:block th:replace="~{/fragments/backToTop.html}"/>
 
     <div class="container mt-5">
         <div class="d-flex justify-content-center row">
