--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -18,7 +18,8 @@
                         <li>
                             <a href="javascript:void(0)"
                                data-toggle="modal" data-target="#exampleModalCenter"
-                               id="openSortModalBtnSidebar" onclick="document.getElementById('wrapper').classList.remove('toggled')">
+                               id="openSortModalBtnSidebar"
+                               onclick="document.getElementById('wrapper').classList.remove('toggled')">
                                 Sort
                             </a>
                         </li>
@@ -32,12 +33,22 @@
                         </a>
                     </li>
                     <li><a th:href="@{/cart}">Cart</a></li>
+                    <li><a th:href="@{/orders/myOrders}">My orders</a></li>
+                    <li><a th:href="@{/orders/placedOrders}">Placed Orders</a></li>
+                    <li><a th:href="@{/requests/add}">Sent Request</a></li>
                     <li>
                         <form th:action="@{/users/logout}"
                               th:method="POST">
                             <input type="submit" value="Logout">
                         </form>
                     </li>
+                </th:block>
+
+                <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                    <li><a th:href="@{/requests/all}">Requests</a></li>
+                    <li><a th:href="@{/decks/add}">Add Deck</a></li>
+                    <li><a th:href="@{/creators/add}">Add creator</a></li>
+                    <li><a th:href="@{/distributor/add}">Add distributor</a></li>
                 </th:block>
             </ul>
         </div>
