--- a/src/main/resources/templates/requests.html
+++ b/src/main/resources/templates/requests.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -18,59 +14,30 @@
             crossorigin="anonymous"></script>
 
 
-    <script src="../static/js/backToTop.js" type="module"></script>
-    <script src="../static/js/sidebar.js" type="module"></script>
+    <script th:src="@{/js/backToTop.js}" type="module"></script>
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
+    <script th:src="@{/js/requests.js}" type="module"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/requests.css}"/>
 
-    <link rel="stylesheet" href="../static/css/requests.css"/>
+    <th:block th:replace="~{/fragments/head.html}"/>
 
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
 </head>
 <body>
 
 <header>
+
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
+
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
     <!-- Up to Top Button-->
-    <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top">&#x2191</button>
+    <th:block th:replace="~{/fragments/backToTop.html}"/>
 
     <div class="container mt-5">
         <div class="d-flex justify-content-center row">
@@ -79,194 +46,20 @@
                     <div class="table-responsive table-borderless">
                         <table class="table">
                             <thead>
-                                <tr>
-                                    <th>Content</th>
-                                    <th>Creator</th>
-                                    <th>Type</th>
-                                    <th>Approve</th>
-                                    <th>Decline</th>
-                                </tr>
+                            <tr>
+                                <th>Content</th>
+                                <th>Creator</th>
+                                <th>Delete</th>
+                            </tr>
                             </thead>
                             <tbody class="table-body">
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info creator"><a href="#">Gosho popvski</a></td>
-                                <td class="info">Offer</td>
+                            <tr class="cell-1" th:each="request: ${requests}" th:object="${request}" th:id="*{id}">
+                                <td class="request" th:text="*{content}">Gasper Antunes</td>
+                                <td class="info creator" th:text="*{creatorUsername}">Gosho popvski</td>
                                 <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
+                                    <button class="check">✔</button>
                                 </td>
                             </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a href="#">Gosho popvski</a></td>
-                                <td class="info"><a href="#">Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-                            <tr class="cell-1">
-                                <td class="request"><a href="#">Gasper Antunes</a></td>
-                                <td class="info"><a>Gosho popvski</a></td>
-                                <td class="info"><a>Offer</a></td>
-                                <td class="decision">
-                                    <button class="approve">✔</button>
-                                </td>
-                                <td class="decision">
-                                    <button class="decline">✖</button>
-                                </td>
-                            </tr>
-
-
-
                             </tbody>
                         </table>
                     </div>
@@ -276,17 +69,7 @@
     </div>
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
-
-<script>
-
-
-    document.querySelectorAll(".decision>button").forEach(e=>e.addEventListener("click", (ev)=>{
-            ev.preventDefault();
-
-            e.parentElement.parentElement.style.display="none";
-        }))
-</script>
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
