--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -153,6 +153,66 @@
                         </div>
                     </div>
                 </a>
+                <a th:each="deck : ${decks}" th:object="${deck}" th:href="@{/decks/{deckId} (deckId=*{id})}" class="card-link-wrap">
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow productCard">
+                            <img class="card-img-top"
+                                 alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                                 th:src="*{picture}"
+                            >
+                            <div class="card-body">
+                                <p class="card-text" th:text="*{title}"></p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a type="button"
+                                           class="btn btn-sm btn-outline-secondary cardBtn detailsBtn stretched-link"
+                                           th:href="@{/decks/{deckId} (deckId=*{id})}">View</a>
+                                        <span sec:authorize="hasRole('ADMIN')">
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn editBtn"
+                                               th:href="@{/decks/{deckId}/edit (deckId=*{id})}">Edit</a>
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
+                                               data-toggle="modal" data-target="#consentModal"
+                                               th:id="|delete-*{title}|"
+                                               href="javascript:void(0)">Delete</a>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a th:each="deck : ${decks}" th:object="${deck}" th:href="@{/decks/{deckId} (deckId=*{id})}" class="card-link-wrap">
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow productCard">
+                            <img class="card-img-top"
+                                 alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                                 th:src="*{picture}"
+                            >
+                            <div class="card-body">
+                                <p class="card-text" th:text="*{title}"></p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a type="button"
+                                           class="btn btn-sm btn-outline-secondary cardBtn detailsBtn stretched-link"
+                                           th:href="@{/decks/{deckId} (deckId=*{id})}">View</a>
+                                        <span sec:authorize="hasRole('ADMIN')">
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn editBtn"
+                                               th:href="@{/decks/{deckId}/edit (deckId=*{id})}">Edit</a>
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
+                                               data-toggle="modal" data-target="#consentModal"
+                                               th:id="|delete-*{title}|"
+                                               href="javascript:void(0)">Delete</a>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
