--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -100,7 +100,7 @@
                             </div>
 
 
-<!--                            todo: see all reviews functionality remains unimplemented-->
+<!--                            todo: see all reviews functionality-->
                             <hr>
 <!--                            <a class="text-center w-100 d-block mt-4 font-weight-bold" id="reveal-reviews" href="#">See All Reviews</a>-->
                         </div>
