--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -97,7 +97,7 @@
                         <span sec:authorize="hasRole('ADMIN')" id="admin-panel">
                             <a type="button"
                                class="btn btn-sm btn-outline-secondary cardBtn editBtn"
-                               th:href="@{/decks/{deckId}/edit (deckId=*{id})}">Edit</a>
+                               th:href="@{/decks/edit/{deckId} (deckId=*{id})}">Edit</a>
                             <a type="button"
                                class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
                                data-toggle="modal" data-target="#consentModal"
