--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -71,10 +71,10 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="form-group text-center">
-                                        <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-                                        <label for="remember"> Remember Me</label>
-                                    </div>
+<!--                                    <div class="form-group text-center">-->
+<!--                                        <input type="checkbox" tabindex="3" class="" name="remember" id="remember">-->
+<!--                                        <label for="remember"> Remember Me</label>-->
+<!--                                    </div>-->
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
@@ -83,16 +83,16 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="text-center">
-                                                    <a href="https://phpoll.com/recover" tabindex="5"
-                                                       class="forgot-password">Forgot Password?</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+<!--                                    <div class="form-group">-->
+<!--                                        <div class="row">-->
+<!--                                            <div class="col-lg-12">-->
+<!--                                                <div class="text-center">-->
+<!--                                                    <a href="https://phpoll.com/recover" tabindex="5"-->
+<!--                                                       class="forgot-password">Forgot Password?</a>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
                                 </form>
 
                                 <form id="register-form" th:action="@{/users/register}" th:method="POST"
