--- a/src/main/resources/templates/editDeck.html
+++ b/src/main/resources/templates/editDeck.html
@@ -56,7 +56,7 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" th:method="patch" th:action="@{/decks/{id}/edit (id=${id})}"
+                                <form id="deck-form" th:method="patch" th:action="@{/decks/edit/{id} (id=${id})}"
                                       enctype="multipart/form-data"
                                       role="form" style="display: block;" th:object="${editDeck}">
 
