--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -45,13 +45,15 @@
         <div class="col-md-12">
             <div class="offer-dedicated-body-left">
                 <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade active show" id="pills-reviews" role="tabpanel" aria-labelledby="pills-reviews-tab">
+                    <div class="tab-pane fade active show" id="pills-reviews" role="tabpanel"
+                         aria-labelledby="pills-reviews-tab">
 
                         <div class="bg-white rounded shadow-sm p-4 mb-4 clearfix graph-star-rating">
                             <h5 class="mb-0 mb-4">Ratings and Reviews</h5>
                             <div class="graph-star-rating-header">
 
-                                <p class="text-black mb-4 mt-2" id="rating" th:text="|Rated ${averageRating} out of 5|"></p>
+                                <p class="text-black mb-4 mt-2" id="rating"
+                                   th:text="|Rated ${averageRating} out of 5|"></p>
                             </div>
                             <div class="graph-star-rating-body">
 
@@ -61,11 +63,14 @@
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div th:style="|width: ${ratings.get(key)}%|" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="|width: ${ratings.get(key)}%|" aria-valuemax="5"
+                                                 aria-valuemin="0" aria-valuenow="5" role="progressbar"
+                                                 class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black" th:text="|${ratings.get(key) ?: 0}%|"></div>
+                                    <div class="rating-list-right text-black"
+                                         th:text="|${ratings.get(key) ?: 0}%|"></div>
                                 </div>
 
                             </div>
@@ -78,7 +83,8 @@
                         </div>
 
 
-                        <div class="bg-white rounded shadow-sm p-4 mb-4 restaurant-detailed-ratings-and-reviews" id="review-section">
+                        <div class="bg-white rounded shadow-sm p-4 mb-4 restaurant-detailed-ratings-and-reviews"
+                             id="review-section">
                             <h5 class="mb-1">All Ratings and Reviews</h5>
 
                             <div class="reviews-members pt-4 pb-4" th:each="review : ${reviews}" th:object="${review}">
@@ -86,7 +92,9 @@
                                     <div class="media-body">
                                         <div class="reviews-members-header">
                                             <h6 class="mb-1">
-                                                <a class="text-black reviewer" th:href="@{/users/profile/{name} (name=*{creatorUsername})}" th:text="*{creatorUsername}">
+                                                <a class="text-black reviewer"
+                                                   th:href="@{/users/profile/{name} (name=*{creatorUsername})}"
+                                                   th:text="*{creatorUsername}">
                                                 </a>
                                             </h6>
                                             <strong th:text="|Rating : *{rating}|"></strong>
@@ -101,38 +109,44 @@
 
 
                             <hr>
-<!--                            <a class="text-center w-100 d-block mt-4 font-weight-bold" id="reveal-reviews" href="#">See All Reviews</a>-->
+                            <!--                            <a class="text-center w-100 d-block mt-4 font-weight-bold" id="reveal-reviews" href="#">See All Reviews</a>-->
                         </div>
                     </div>
 
-                    <div class="bg-white rounded shadow-sm p-4 mb-5 rating-review-select-page" th:if="${!alreadyRated}">
-                        <h5 class="mb-4">Leave Comment</h5>
-                        <p class="mb-2">Rate the Product</p>
-                        <form id="review-form" th:object="${addReview}" th:method="POST" th:action="@{/offers/{id}/reviews/add (id=${id})}">
+                    <th:block th:unless="${#authorization.expression('isOwner(__${id}__)')}">
+                        <div class="bg-white rounded shadow-sm p-4 mb-5 rating-review-select-page"
+                             th:if="${!alreadyRated}">
+                            <h5 class="mb-4">Leave Comment</h5>
+                            <p class="mb-2">Rate the Product</p>
+                            <form id="review-form" th:object="${addReview}" th:method="POST"
+                                  th:action="@{/offers/{id}/reviews/add (id=${id})}">
 
-                            <input type="number" name="rating" tabindex="2"
-                                   min="1" max="5"
-                                   class="form-control" id="review-rating"
-                                   placeholder="Rating(1-5)"
-                                   th:field="*{rating}" th:errorclass="invalid-field"
-                            >
-                            <div class="error" th:text="${#strings.listJoin(#fields.errors('rating'), '; ')}">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Your Comment</label>
-                                <textarea class="form-control" form="review-form"
-                                            th:field="*{review}" th:errorclass="invalid-field"
-                                ></textarea>
-                                <div class="error" th:text="${#strings.listJoin(#fields.errors('review'), '; ')}">
+                                <input type="number" name="rating" tabindex="2"
+                                       min="1" max="5"
+                                       class="form-control" id="review-rating"
+                                       placeholder="Rating(1-5)"
+                                       th:field="*{rating}" th:errorclass="invalid-field"
+                                >
+                                <div class="error" th:text="${#strings.listJoin(#fields.errors('rating'), '; ')}">
                                 </div>
-                            </div>
 
-                            <div class="form-group">
-                                <button class="btn btn-primary btn-sm" type="submit" id="submit-review-btn" form="review-form"> Submit Comment </button>
-                            </div>
-                        </form>
-                    </div>
+                                <div class="form-group">
+                                    <label>Your Comment</label>
+                                    <textarea class="form-control" form="review-form"
+                                              th:field="*{review}" th:errorclass="invalid-field"
+                                    ></textarea>
+                                    <div class="error" th:text="${#strings.listJoin(#fields.errors('review'), '; ')}">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <button class="btn btn-primary btn-sm" type="submit" id="submit-review-btn"
+                                            form="review-form"> Submit Comment
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </th:block>
                 </div>
             </div>
         </div>
@@ -141,8 +155,8 @@
 </main>
 
 <script th:inline="javascript">
-    if([[${badInfo}]]){
-        document.getElementById('review-form').scrollIntoView({behavior:'smooth'});
+    if ([[${badInfo}]]) {
+        document.getElementById('review-form').scrollIntoView({behavior: 'smooth'});
     }
 </script>
 
