--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -35,7 +35,7 @@
     <div class="d-flex align-items-center justify-content-center vh-80">
         <div class="text-center">
             <h1 class="display-1 fw-bold">403</h1>
-            <p class="fs-3"><span class="text-danger">Opps!</span> You are not allowed to see this.</p>
+            <p class="fs-3"><span class="text-danger">Opps!</span> You are cannot do that.</p>
             <p class="lead" th:if="${reason}==null">
                 You don't have the authorities to access this page.
             </p>
